# Pramanix

./: .dockerignore  .env.example  .env.test.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  10thPhase.md  11thPhase.md  12thPhase.md  9thphase.md  BENCHMARK_STATUS.md  BLUEPRINT.md  Benchmark Stress Test.md  Blueprint.md  CHANGELOG.md  Checklist.md  Dockerfile.dev  Dockerfile.production  Dockerfile.slim  Dockerfile.test  ENVIRONMENT.md  FORENSIC_AUDIT.md  Instructions  LICENSE  LICENSE-COMMERCIAL  MIGRATION.md  PRAMANIX_ENGINEERING_PLAN.md  Pramanix_Audit.md  Pramanixgoldminemasterplan.md  README.md  RELEASE_READINESS.md  REQUIRED_INTEGRATIONS.md  SECURITY.md  WORK_LEDGER.md  _fix_solve.py  codecov.yml  coverage.json  coverage_new.xml  coverage_output.txt  (+26 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml
benchmarks/: 100m_audit_merge.py  100m_audit_orchestrator.py  100m_audit_worker.py  100m_domain_policies.py  100m_orchestrator_fast.py  100m_worker_fast.py  1m_decisions_full_audit.py  _test_fast_e2e.py  audit_charts.py  audit_pre_run_prep.py  generate_charts.py  latency_benchmark.py  memory_stability_extended.py  setup_before_run.ps1
deploy/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  networkpolicy.yaml  service.yaml
docs/: ARCHITECTURE_NOTES.md  BENCHMARK_STATUS.md  BLUEPRINT.md  Blueprint.md  CHANGELOG.md  DECISIONS.md  ENVIRONMENT.md  ENVIRONMENT_SETUP.md  FLAW_AUDIT.md  HANDOVER.md  Ideal_Architecture.md  KNOWN_GAPS.md  LAUNCH_STRATEGY.md  MIGRATION.md  PERFORMANCE_WHITEPAPER.md  PRAMANIX_BLUEPRINT_PART2.md  PRAMANIX_MASTER_AUDIT.md  PRAMANIX_MASTER_BLUEPRINT.md  PROOF_DOSSIER.md  PUBLIC_API.md  Pramanix_PRD_v1.0.docx  Pramnix_elite_roadmap.md  RELEASE_CHECKLIST.md  RELEASE_READINESS.md  REPO_AUDIT.md  THESIS.md  THESIS.tex  WHITEPAPER.md  WORK_LEDGER.md  api-compatibility.md  architecture.md  claims-matrix.md  compliance.md  deployment.md  incident_response.md  integrations.md  performance.md  policy_authoring.md  pramanix_deep_audit.md  primitives.md  (+2 more)
examples/: __init__.py  autogen_multi_agent.py  banking_transfer.py  cloud_infra.py  fastapi_banking_api.py  fintech_killshot.py  healthcare_phi_access.py  healthcare_rbac.py  hft_wash_trade.py  infra_blast_radius.py  langchain_banking_agent.py  llamaindex_rag_guard.py  mesh_policy_ir.yaml  multi_policy_composition.py  multi_primitive_composition.py  neuro_symbolic_agent.py
public/: apex-simulation.html
requirements/: integration.in  production.in  production.txt
spikes/: expression_tree_cache_spike.py  pramanix_hardened.py  pramanix_llm_hardened.py  pramanix_telemetry.py  radar_test.py  test_integrity.py  transpiler_spike.py
src/pramanix/: __init__.py  _platform.py  audit_sink.py  circuit_breaker.py  cli.py  compiler.py  crypto.py  decision.py  decorator.py  dry_run.py  exceptions.py  execution_token.py  expressions.py  fast_path.py  governance_config.py  guard.py  guard_config.py  guard_pipeline.py  key_provider.py  logging_helpers.py  migration.py  policy.py  provenance.py  resolvers.py  solver.py  testing.py  transpiler.py  validator.py  wal.py  worker.py
tests/: conftest.py
tests/adversarial/: test_adversarial_circuit_breaker_failures.py  test_adversarial_numeric_boundary.py  test_adversarial_token_replay.py  test_fail_safe_invariant.py  test_field_overflow.py  test_hmac_ipc_integrity.py  test_id_injection.py  test_injection_corpus_v2.py  test_prompt_injection.py  test_pydantic_strict_boundary.py  test_toctou_awareness.py  test_worker_crash_isolation.py  test_z3_context_isolation.py
tests/benchmarks/: test_solver_latency.py
tests/helpers/: __init__.py  real_protocols.py  solver_stubs.py
tests/integration/: conftest.py  test_agent_orchestration_adapters.py  test_anthropic_translator.py  test_aws_kms_provider.py  test_azure_keyvault.py  test_banking_flow.py  test_cohere_translator.py  test_cold_start_warmup.py  test_corrupted_state_injection.py  test_crewai_adapter.py  test_decorator_coverage.py  test_dspy_adapter.py  test_fastapi_async.py  test_fastapi_middleware.py  test_gcp_secret_manager.py  test_gemini_translator.py  test_grpc_interceptor.py  test_guard_pipeline_nonnumeric.py  test_guard_to_compliance_oracle.py  test_haystack_adapter.py  test_integration_coverage.py  test_integration_matrix.py  test_kafka_audit_sink.py  test_kafka_consumer_interceptor.py  test_langchain_tool.py  test_llamacpp_translator.py  test_llm_consensus.py  test_ollama_translator.py  test_postgres_oversight_wait.py  test_postgres_token.py  test_postgres_wal.py  test_process_mode.py  test_pydantic_ai_adapter.py  test_redis_backend_coverage.py  test_redis_circuit_breaker.py  test_s3_audit_sink.py  test_semantic_kernel_adapter.py  test_vault_provider.py  test_zero_trust_identity.py
tests/perf/: __init__.py  test_memory_stability.py  test_performance_targets.py
tests/property/: test_dsl_and_transpiler_properties.py  test_fintech_primitive_properties.py  test_serialization_roundtrip.py
tests/unit/: conftest.py  test_agent_orchestration.py  test_api_contract.py  test_archiver_coverage_gaps.py  test_array_field.py  test_ast_caching.py  test_audit.py  test_audit_cli.py  test_audit_sink.py  test_audit_sink_coverage_v2.py  test_audit_sink_full_coverage.py  test_bedrock_translator.py  test_boundary_examples.py  test_calibrate_injection_cli.py  test_circuit_breaker.py  test_circuit_breaker_and_guard_paths.py  test_circuit_breaker_concurrent.py  test_circuit_breaker_half_open.py  test_circuit_breaker_metrics_coverage.py  test_circuit_breaker_sync.py  test_cli_compile_policy.py  test_cli_coverage_gaps.py  test_cli_coverage_v3.py  test_cli_init.py  test_cli_lint_policy.py  test_cli_new_features.py  test_cli_report.py  test_cli_simulate.py  test_cli_verify_proof_and_audit.py  test_compiler_ir_coverage.py  test_compliance_full_coverage.py  test_compliance_reporter.py  test_concurrency_runtime_paths.py  test_consensus_robustness.py  test_consensus_semantic.py  test_consume_within_sqlite.py  test_coverage_boost.py  (+135 more)
tools/: remove_fixed_flaws.py
(+83 files in other folders)
