[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pramanix"
version = "0.8.0"
description = "Deterministic neuro-symbolic guardrails for autonomous AI agents"
authors = ["Viraj Jain <viraj@pramanix.dev>"]
license = "AGPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/viraj1011JAIN/Pramanix"
repository = "https://github.com/viraj1011JAIN/Pramanix"
documentation = "https://github.com/viraj1011JAIN/Pramanix#readme"
keywords = ["ai-safety", "guardrails", "smt", "z3", "formal-verification", "neuro-symbolic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
packages = [{include = "pramanix", from = "src"}]

[tool.poetry.scripts]
pramanix = "pramanix.cli:main"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
pydantic = "^2.5"
z3-solver = "^4.12"
structlog = "^23.2"
prometheus-client = "^0.19"
httpx = {version = "^0.27", optional = true}
openai = {version = "^1.10", optional = true}
anthropic = {version = "^0.86", optional = true}
tenacity = {version = "^8.2", optional = true}
opentelemetry-sdk = {version = "^1.20", optional = true}
opentelemetry-exporter-otlp-proto-grpc = {version = "^1.20", optional = true}
fastapi = {version = ">=0.110,<1.0", optional = true}
starlette = {version = ">=0.37", optional = true}
langchain-core = {version = ">=0.1", optional = true}
llama-index-core = {version = ">=0.10", optional = true}
pyautogen = {version = ">=0.2", optional = true}
redis = {version = ">=5.0", optional = true}
orjson = ">=3.9"
cryptography = {version = ">=41.0", optional = true}

[tool.poetry.extras]
translator = ["httpx", "openai", "anthropic", "tenacity"]
otel = ["opentelemetry-sdk", "opentelemetry-exporter-otlp-proto-grpc"]
fastapi = ["fastapi", "starlette", "httpx"]
langchain = ["langchain-core"]
llamaindex = ["llama-index-core"]
autogen = ["pyautogen"]
integrations = ["fastapi", "starlette", "httpx", "langchain-core", "llama-index-core", "pyautogen"]
identity = ["redis"]
audit = []
circuit-breaker = []
crypto = ["cryptography"]
all = ["httpx", "openai", "anthropic", "tenacity", "opentelemetry-sdk", "opentelemetry-exporter-otlp-proto-grpc", "fastapi", "starlette", "langchain-core", "llama-index-core", "pyautogen", "redis", "cryptography"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
hypothesis = "^6.100"
mypy = "^1.11"
ruff = "^0.5"
httpx = "^0.27"
anthropic = "^0.86"
tenacity = "^8.2"
openai = "^1.10"
fakeredis = {version = ">=2.21", extras = ["lua"]}
opentelemetry-sdk = "^1.20"
respx = "^0.21"

[tool.mypy]
strict = true
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "z3",
    "z3.*",
    "prometheus_client",
    "prometheus_client.*",
    "opentelemetry.*",
]
ignore_missing_imports = true


[[tool.mypy.overrides]]
module = [
    "openai",
    "openai.*",
    "anthropic",
    "anthropic.*",
    "httpx",
    "httpx.*",
    "tenacity",
    "tenacity.*",
    "langchain_core",
    "langchain_core.*",
    "llama_index",
    "llama_index.*",
    "autogen",
    "autogen.*",
    "starlette",
    "starlette.*",
    "fastapi",
    "fastapi.*",
    "redis",
    "redis.*",
    "testcontainers",
    "testcontainers.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "T20",  # flake8-print (no print statements in library code)
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",    # line length — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
# Primitive factory functions are intentionally PascalCase (styled as constructors).
"src/pramanix/primitives/*.py" = ["N802"]
# Integration tests use print() for latency measurement output; T20 not applicable here.
# Tests also use ConstraintExpr at runtime (not just type-checking) via invariants() return type.
"tests/integration/*.py" = ["T20", "TCH"]
"tests/unit/*.py" = ["TCH"]
# Adversarial test vectors use OWASP-style uppercase labels (A-X) to match the
# checklist specification. N802 suppressed — renaming would break traceability.
"tests/adversarial/test_field_overflow.py" = ["N802"]
"tests/adversarial/test_id_injection.py" = ["N802"]
# test_prompt_injection.py: N802 same as above. RUF001/003: the fullwidth digits
# (５, ０) in test_F_unicode_fullwidth_digits_in_string are intentional test
# vectors verifying that sanitise_user_input() normalises them correctly.
"tests/adversarial/test_prompt_injection.py" = ["N802", "RUF001", "RUF003"]
# exceptions.py: SemanticPolicyViolation is an API-stable public name exported
# in __all__ since v0.1. Renaming to SemanticPolicyViolationError would be a
# breaking API change. N818 suppressed with justification.
"src/pramanix/exceptions.py" = ["N818"]
# _sanitise.py: the docstring examples showing NFKC normalisation deliberately
# contain fullwidth chars (Ａ, ５) to illustrate the before/after transform.
# These are documentation-only and do not affect runtime behaviour.
"src/pramanix/translator/_sanitise.py" = ["RUF002"]
"src/pramanix/integrations/*.py" = ["TCH"]
# CLI is a terminal entry point — print() is the intended output mechanism.
"src/pramanix/cli.py" = ["T20"]
"tests/integration/test_fastapi_middleware.py" = ["T20"]
"tests/integration/test_langchain_tool.py" = ["T20"]
"tests/integration/test_integration_matrix.py" = ["T20"]
"examples/*.py" = ["T20", "TCH", "E402"]
# Benchmark and spike scripts use print() for output and have sys.path setup
# before imports — both T20 and E402 are intentional patterns here.
"benchmarks/*.py" = ["T20", "E402"]
"spikes/*.py" = ["T20", "E402"]
# Top-level script files: print() is their intended output mechanism.
# SemanticPolicyViolation in pramanix_hardened.py mirrors the API-stable name
# in src/pramanix/exceptions.py — N818 suppressed for same reason.
"pramanix_hardened.py" = ["T20", "E402", "N818"]
"pramanix_llm_hardened.py" = ["T20", "E402"]
"pramanix_telemetry.py" = ["T20", "E402"]
"test_integrity.py" = ["T20", "E402"]
"test_llm_hardening.py" = ["T20", "E402"]
"radar_test.py" = ["T20", "E402"]
"_fix_solve.py" = ["T20", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["pramanix"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "perf: performance benchmarks",
    "adversarial: adversarial security tests",
]

[tool.coverage.run]
source = ["src/pramanix"]
branch = true
omit = [
    "src/pramanix/translator/openai_compat.py",
    # Optional-extra integration modules — require packages not installed in the
    # base dev environment (langchain, fastapi, autogen, llama-index, pyautogen).
    # Covered by integration tests when extras are installed; excluded from the
    # base coverage gate to avoid false failures in CI without the extras.
    "src/pramanix/integrations/*.py",
]

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
