[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pramanix"
version = "1.0.0"
description = "Deterministic neuro-symbolic guardrails for autonomous AI agents"
authors = ["Viraj Jain <viraj@pramanix.dev>"]
license = "AGPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/viraj1011JAIN/Pramanix"
repository = "https://github.com/viraj1011JAIN/Pramanix"
documentation = "https://github.com/viraj1011JAIN/Pramanix#readme"
keywords = ["ai-safety", "guardrails", "smt", "z3", "formal-verification", "neuro-symbolic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
packages = [{include = "pramanix", from = "src"}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/viraj1011JAIN/Pramanix/issues"
"Documentation" = "https://github.com/viraj1011JAIN/Pramanix"
"Changelog" = "https://github.com/viraj1011JAIN/Pramanix/blob/main/CHANGELOG.md"

[tool.poetry.scripts]
pramanix = "pramanix.cli:main"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pydantic = "^2.5"
z3-solver = "^4.12"
structlog = "^23.2"
prometheus-client = {version = "^0.19", optional = true}
orjson = {version = ">=3.9", optional = true}
httpx = {version = "^0.27", optional = true}
openai = {version = "^1.10", optional = true}
anthropic = {version = "^0.97", optional = true}
tenacity = {version = "^8.2", optional = true}
opentelemetry-sdk = {version = "^1.20", optional = true}
opentelemetry-exporter-otlp-proto-grpc = {version = "^1.20", optional = true}
fastapi = {version = ">=0.110,<1.0", optional = true}
starlette = {version = ">=0.37", optional = true}
langchain-core = {version = ">=0.1", optional = true}
llama-index-core = {version = ">=0.10", optional = true}
pyautogen = {version = ">=0.2", optional = true}
redis = {version = ">=5.0", optional = true}
cryptography = {version = ">=41.0", optional = true}
boto3 = {version = ">=1.34", optional = true}
azure-keyvault-secrets = {version = ">=4.7", optional = true}
azure-identity = {version = ">=1.15", optional = true}
google-cloud-secret-manager = {version = ">=2.16", optional = true}
hvac = {version = ">=2.0", optional = true}
confluent-kafka = {version = ">=2.3", optional = true}
datadog-api-client = {version = ">=2.20", optional = true}
fpdf2 = {version = ">=2.7", optional = true}
cohere = {version = ">=5.0", optional = true}
mistralai = {version = ">=1.0", optional = true}
google-generativeai = {version = ">=0.7", optional = true}
llama-cpp-python = {version = ">=0.2", optional = true}
asyncpg = {version = ">=0.29", optional = true}
dspy-ai = {version = ">=2.4", optional = true}
crewai = {version = ">=0.55", optional = true}
pydantic-ai = {version = ">=0.0.9", optional = true}
semantic-kernel = {version = ">=1.0", optional = true}
haystack-ai = {version = ">=2.0", optional = true}
scikit-learn = {version = ">=1.3", optional = true}

[tool.poetry.extras]
translator = ["httpx", "openai", "anthropic", "tenacity"]
otel = ["opentelemetry-sdk", "opentelemetry-exporter-otlp-proto-grpc"]
fastapi = ["fastapi", "starlette", "httpx"]
langchain = ["langchain-core"]
llamaindex = ["llama-index-core"]
autogen = ["pyautogen"]
integrations = ["fastapi", "starlette", "httpx", "langchain-core", "llama-index-core", "pyautogen"]
identity = ["redis"]
audit = ["fpdf2"]
metrics = ["prometheus-client"]
performance = ["orjson"]
circuit-breaker = []
crypto = ["cryptography"]
aws = ["boto3"]
azure = ["azure-keyvault-secrets", "azure-identity"]
gcp = ["google-cloud-secret-manager"]
vault = ["hvac"]
kafka = ["confluent-kafka"]
s3 = ["boto3"]
datadog = ["datadog-api-client"]
splunk = ["httpx"]
pdf = ["fpdf2"]
cohere = ["cohere"]
mistral = ["mistralai"]
gemini = ["google-generativeai"]
llamacpp = ["llama-cpp-python"]
postgres = ["asyncpg"]
dspy = ["dspy-ai"]
crewai = ["crewai"]
pydantic-ai = ["pydantic-ai"]
semantic-kernel = ["semantic-kernel"]
haystack = ["haystack-ai"]
sklearn = ["scikit-learn"]
all = ["prometheus-client", "orjson", "httpx", "openai", "anthropic", "tenacity", "opentelemetry-sdk", "opentelemetry-exporter-otlp-proto-grpc", "fastapi", "starlette", "langchain-core", "llama-index-core", "pyautogen", "redis", "cryptography", "boto3", "azure-keyvault-secrets", "azure-identity", "google-cloud-secret-manager", "hvac", "confluent-kafka", "datadog-api-client", "fpdf2", "cohere", "mistralai", "google-generativeai", "llama-cpp-python", "asyncpg", "dspy-ai", "crewai", "pydantic-ai", "semantic-kernel", "haystack-ai", "scikit-learn"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
pytest-timeout = ">=0.5"
hypothesis = "^6.100"
mypy = "^1.11"
ruff = ">=0.6"
httpx = "^0.27"
anthropic = "^0.97"
tenacity = "^8.2"
openai = "^1.10"
fakeredis = {version = ">=2.21", extras = ["lua"]}
opentelemetry-sdk = "^1.20"
respx = "^0.21"
# Integration test infrastructure — real containers, no fakes
testcontainers = {version = ">=4.0", extras = ["kafka", "postgres", "redis", "localstack"]}
docker = ">=6.0"
hvac = ">=2.0"
asyncpg = ">=0.29"
confluent-kafka = ">=2.3"
boto3 = ">=1.34"
cohere = ">=5.0"
google-generativeai = ">=0.7"

[tool.mypy]
strict = true
python_version = "3.11"
incremental = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "z3",
    "z3.*",
    "prometheus_client",
    "prometheus_client.*",
    "opentelemetry.*",
]
ignore_missing_imports = true


[[tool.mypy.overrides]]
module = [
    "openai",
    "openai.*",
    "anthropic",
    "anthropic.*",
    "httpx",
    "httpx.*",
    "tenacity",
    "tenacity.*",
    "langchain_core",
    "langchain_core.*",
    "llama_index",
    "llama_index.*",
    "autogen",
    "autogen.*",
    "starlette",
    "starlette.*",
    "fastapi",
    "fastapi.*",
    "redis",
    "redis.*",
    "testcontainers",
    "testcontainers.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "boto3",
    "boto3.*",
    "botocore",
    "botocore.*",
    "azure.identity",
    "azure.identity.*",
    "azure.keyvault.secrets",
    "azure.keyvault.secrets.*",
    "google.cloud.secretmanager",
    "google.cloud.secretmanager_v1",
    "google.cloud.secretmanager_v1.*",
    "hvac",
    "hvac.*",
    "confluent_kafka",
    "confluent_kafka.*",
    "datadog_api_client",
    "datadog_api_client.*",
    "fpdf",
    "fpdf.*",
    "asyncpg",
    "asyncpg.*",
    "llama_cpp",
    "llama_cpp.*",
    "cohere",
    "cohere.*",
    "mistralai",
    "mistralai.*",
    "dspy",
    "dspy.*",
    "crewai",
    "crewai.*",
    "haystack",
    "haystack.*",
    "pydantic_ai",
    "pydantic_ai.*",
    "semantic_kernel",
    "semantic_kernel.*",
    "grpc",
    "grpc.*",
    "grpcio",
    "grpcio.*",
    "sklearn",
    "sklearn.*",
    "google.generativeai",
    "google.generativeai.*",
    "google",
    "google.*",
    "google.api_core",
    "google.api_core.*",
    "kafka",
    "kafka.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "T20",   # flake8-print (no print statements in library code)
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
    "S",     # flake8-bandit (security)
    "ASYNC", # flake8-async (async anti-patterns)
]
ignore = [
    "E501",    # line length — handled by formatter
    "S101",    # assert used — acceptable in tests and warmup
    "S110",    # try-except-pass — used deliberately in fail-safe paths
    "S603",    # subprocess without shell — intentional in drain/kill paths
    "S607",    # partial path subprocess — intentional in drain/kill paths
]

[tool.ruff.lint.per-file-ignores]
# Primitive factory functions are intentionally PascalCase (styled as constructors).
"src/pramanix/primitives/*.py" = ["N802"]
# Integration tests use print() for latency measurement output; T20 not applicable here.
# Tests also use ConstraintExpr at runtime (not just type-checking) via invariants() return type.
"tests/integration/*.py" = ["T20", "TCH", "E402"]
"tests/unit/*.py" = ["TCH", "E402", "N802", "S106"]
# Adversarial test vectors use OWASP-style uppercase labels (A-X) to match the
# checklist specification. N802 suppressed — renaming would break traceability.
"tests/adversarial/test_field_overflow.py" = ["N802"]
"tests/adversarial/test_id_injection.py" = ["N802"]
# test_prompt_injection.py: N802 same as above. RUF001/003: the fullwidth digits
# (５, ０) in test_F_unicode_fullwidth_digits_in_string are intentional test
# vectors verifying that sanitise_user_input() normalises them correctly.
"tests/adversarial/test_prompt_injection.py" = ["N802", "RUF001", "RUF003"]
# exceptions.py: SemanticPolicyViolation is an API-stable public name exported
# in __all__ since v0.1. Renaming to SemanticPolicyViolationError would be a
# breaking API change. N818 suppressed with justification.
"src/pramanix/exceptions.py" = ["N818"]
# _sanitise.py: the docstring examples showing NFKC normalisation deliberately
# contain fullwidth chars (Ａ, ５) to illustrate the before/after transform.
# These are documentation-only and do not affect runtime behaviour.
"src/pramanix/translator/_sanitise.py" = ["RUF002"]
"src/pramanix/integrations/*.py" = ["TCH"]
# CLI is a terminal entry point — print() is the intended output mechanism.
"src/pramanix/cli.py" = ["T20"]
"tests/integration/test_fastapi_middleware.py" = ["T20"]
"tests/integration/test_langchain_tool.py" = ["T20"]
"tests/integration/test_integration_matrix.py" = ["T20"]
"examples/*.py" = ["T20", "TCH", "E402"]
# test_audit_cli.py and test_crypto.py: pytest.importorskip() must be called before
# the optional-dependency imports, structurally forcing those imports below the top of
# file.  E402 (import not at top) and I001 (import sort order, since the late-import
# block cannot be merged with the top block) are suppressed here — not fixable by
# reordering without breaking the importorskip() semantics.
"tests/unit/test_audit_cli.py" = ["E402", "I001"]
"tests/unit/test_crypto.py" = ["E402", "I001"]
# Benchmark and spike scripts use print() for output and have sys.path setup
# before imports — both T20 and E402 are intentional patterns here.
"benchmarks/*.py" = ["T20", "E402", "N806", "TCH003", "RUF001", "RUF002", "RUF003"]
"spikes/*.py" = ["T20", "E402"]
"_fix_solve.py" = ["T20", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["pramanix"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--ignore=tests/perf"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "perf: performance benchmarks",
    "adversarial: adversarial security tests",
]
filterwarnings = [
    # Cohere SDK v5 uses deprecated Pydantic V1 internal APIs — upstream issue.
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
    # google-generativeai emits FutureWarning about API surface changes — upstream.
    "ignore::FutureWarning:google",
    # InMemoryExecutionTokenVerifier intentionally warns in tests that use it;
    # the warning is the expected behaviour under test.
    "ignore:InMemoryExecutionTokenVerifier:UserWarning",
    # GuardConfig emits a production-mode advisory when PRAMANIX_ENV=production;
    # tests that set this env var are explicitly testing that path.
    "ignore:GuardConfig:UserWarning",
]

[tool.coverage.run]
source = ["src/pramanix"]
branch = true
omit = []

[tool.coverage.report]
fail_under = 98
show_missing = true
exclude_lines = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
    "\\.\\.\\.",
]
