[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pramanix"
version = "1.0.0"
description = "Deterministic neuro-symbolic guardrails for autonomous AI agents"
authors = ["Viraj Jain <viraj@pramanix.dev>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/viraj1011JAIN/Pramanix"
repository = "https://github.com/viraj1011JAIN/Pramanix"
documentation = "https://github.com/viraj1011JAIN/Pramanix#readme"
keywords = ["ai-safety", "guardrails", "smt", "z3", "formal-verification", "neuro-symbolic"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
packages = [{include = "pramanix", from = "src"}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/viraj1011JAIN/Pramanix/issues"
"Documentation" = "https://github.com/viraj1011JAIN/Pramanix"
"Changelog" = "https://github.com/viraj1011JAIN/Pramanix/blob/main/CHANGELOG.md"
"License" = "https://www.apache.org/licenses/LICENSE-2.0"

[tool.poetry.scripts]
pramanix = "pramanix.cli:main"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pydantic = "^2.5"
z3-solver = "^4.12"
structlog = "^23.2"
google-re2 = ">=1.0"
prometheus-client = {version = "^0.19", optional = true}
orjson = {version = ">=3.9", optional = true}
httpx = {version = "^0.27", optional = true}
openai = {version = "^1.10", optional = true}
anthropic = {version = "^0.97", optional = true}
tenacity = {version = "^8.2", optional = true}
opentelemetry-sdk = {version = "^1.20", optional = true}
opentelemetry-exporter-otlp-proto-grpc = {version = "^1.20", optional = true}
fastapi = {version = ">=0.110,<1.0", optional = true}
starlette = {version = ">=0.37", optional = true}
langchain-core = {version = ">=0.1", optional = true}
llama-index-core = {version = ">=0.10", optional = true}
pyautogen = {version = ">=0.2", optional = true}
redis = {version = ">=5.0", optional = true}
cryptography = {version = ">=46.0.7", optional = true}
boto3 = {version = ">=1.34", optional = true}
azure-keyvault-secrets = {version = ">=4.7", optional = true}
azure-identity = {version = ">=1.15", optional = true}
google-cloud-secret-manager = {version = ">=2.16", optional = true}
hvac = {version = ">=2.0", optional = true}
confluent-kafka = {version = ">=2.3", optional = true}
datadog-api-client = {version = ">=2.20", optional = true}
fpdf2 = {version = ">=2.7", optional = true}
cohere = {version = ">=5.0", optional = true}
mistralai = {version = ">=1.0", optional = true}
google-generativeai = {version = ">=0.7", optional = true}
llama-cpp-python = {version = ">=0.2", optional = true}
asyncpg = {version = ">=0.29", optional = true}
dspy-ai = {version = ">=2.4", optional = true}
crewai = {version = ">=0.55", optional = true}
pydantic-ai = {version = ">=0.0.9", optional = true}
semantic-kernel = {version = ">=1.0", optional = true}
haystack-ai = {version = ">=2.0", optional = true}
scikit-learn = {version = ">=1.3", optional = true}
google-cloud-aiplatform = {version = ">=1.50", optional = true}

[tool.poetry.extras]
translator = ["httpx", "openai", "anthropic", "tenacity"]
otel = ["opentelemetry-sdk", "opentelemetry-exporter-otlp-proto-grpc"]
fastapi = ["fastapi", "starlette", "httpx"]
langchain = ["langchain-core"]
llamaindex = ["llama-index-core"]
autogen = ["pyautogen"]
integrations = ["fastapi", "starlette", "httpx", "langchain-core", "llama-index-core", "pyautogen"]
identity = ["redis"]
audit = ["fpdf2"]
metrics = ["prometheus-client"]
performance = ["orjson"]
# redis: standalone extra for any feature that uses Redis directly
# (intent cache, circuit-breaker distributed backend, identity/session state).
redis = ["redis"]
circuit-breaker = ["redis"]
crypto = ["cryptography"]
aws = ["boto3"]
azure = ["azure-keyvault-secrets", "azure-identity"]
gcp = ["google-cloud-secret-manager"]
vault = ["hvac"]
kafka = ["confluent-kafka"]
# s3: convenience alias for AWS S3-specific deployments (same dep as aws).
s3 = ["boto3"]
datadog = ["datadog-api-client"]
splunk = ["httpx"]
pdf = ["fpdf2"]
cohere = ["cohere"]
mistral = ["mistralai"]
gemini = ["google-generativeai"]
llamacpp = ["llama-cpp-python"]
postgres = ["asyncpg"]
dspy = ["dspy-ai"]
crewai = ["crewai"]
pydantic-ai = ["pydantic-ai"]
semantic-kernel = ["semantic-kernel"]
haystack = ["haystack-ai"]
sklearn = ["scikit-learn"]
security = ["google-re2"]
bedrock = ["boto3"]
vertexai = ["google-cloud-aiplatform"]
all = ["prometheus-client", "orjson", "httpx", "openai", "anthropic", "tenacity", "opentelemetry-sdk", "opentelemetry-exporter-otlp-proto-grpc", "fastapi", "starlette", "langchain-core", "llama-index-core", "pyautogen", "redis", "cryptography", "boto3", "azure-keyvault-secrets", "azure-identity", "google-cloud-secret-manager", "hvac", "confluent-kafka", "datadog-api-client", "fpdf2", "cohere", "mistralai", "google-generativeai", "llama-cpp-python", "asyncpg", "dspy-ai", "crewai", "pydantic-ai", "semantic-kernel", "haystack-ai", "scikit-learn", "google-cloud-aiplatform"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
pytest-timeout = ">=0.5"
hypothesis = "^6.100"
mypy = "^1.11"
ruff = ">=0.6"
httpx = "^0.27"
anthropic = "^0.97"
tenacity = "^8.2"
openai = "^1.10"
opentelemetry-sdk = "^1.20"
respx = "^0.21"
# Integration test infrastructure — real containers, no fakes
testcontainers = {version = ">=4.0", extras = ["kafka", "postgres", "redis", "localstack"]}
docker = ">=6.0"
hvac = ">=2.0"
asyncpg = ">=0.29"
confluent-kafka = ">=2.3"
boto3 = ">=1.34"
cohere = ">=5.0"
google-generativeai = ">=0.7"
psutil = ">=5.9"

[tool.mypy]
strict = true
python_version = "3.11"
incremental = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "z3",
    "prometheus_client",
    "prometheus_client.*",
    "opentelemetry.*",
]
ignore_missing_imports = true


[[tool.mypy.overrides]]
module = [
    "openai",
    "openai.*",
    "anthropic",
    "anthropic.*",
    "httpx",
    "httpx.*",
    "tenacity",
    "tenacity.*",
    "langchain_core",
    "langchain_core.*",
    "llama_index",
    "llama_index.*",
    "starlette",
    "starlette.*",
    "fastapi",
    "fastapi.*",
    "redis",
    "redis.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "boto3",
    "boto3.*",
    "botocore",
    "botocore.*",
    "azure.identity",
    "azure.identity.*",
    "azure.keyvault.secrets",
    "azure.keyvault.secrets.*",
    "google.cloud.secretmanager",
    "google.cloud.secretmanager_v1",
    "google.cloud.secretmanager_v1.*",
    "hvac",
    "confluent_kafka",
    "confluent_kafka.*",
    "datadog_api_client",
    "datadog_api_client.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "fpdf",
    "fpdf.*",
    "asyncpg",
    "llama_cpp",
    "llama_cpp.*",
    "cohere",
    "cohere.*",
    "mistralai",
    "mistralai.*",
    "dspy",
    "crewai",
    "crewai.*",
    "haystack",
    "haystack.*",
    "semantic_kernel",
    "semantic_kernel.*",
    "grpc",
    "grpc.*",
    "sklearn",
    "sklearn.*",
    "google.generativeai",
    "google.generativeai.*",
    "google",
    "google.*",
    "google.api_core",
    "google.api_core.*",
    "vertexai",
    "vertexai.*",
    "google.cloud.aiplatform",
    "google.cloud.aiplatform.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "re2",
    "detoxify",
    "sentence_transformers",
    "sentence_transformers.*",
    "jsonschema",
    "jsonschema.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# audit_sink.py calls datadog_api_client functions that lack type stubs.
# Suppressing untyped-call check only for this file rather than globally.
module = ["pramanix.audit_sink"]
disallow_untyped_calls = false

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "T20",   # flake8-print (no print statements in library code)
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
    "S",     # flake8-bandit (security)
    "ASYNC", # flake8-async (async anti-patterns)
]
ignore = [
    "E501",    # line length — handled by formatter
    "E712",    # comparison to True/False — Z3 DSL overloads == as a constraint builder; `E(f) == False` is not a Python bool comparison
    # S101 (assert-used) is scoped to tests/ only via per-file-ignores below.
    # Production source code (src/) must use explicit runtime checks instead of
    # assert, which is silently stripped by python -O / PYTHONOPTIMIZE=1.
    "S110",    # try-except-pass — used deliberately in fail-safe paths
    "S603",    # subprocess without shell — intentional in drain/kill paths
    "S607",    # partial path subprocess — intentional in drain/kill paths
    # N806: lazy optional-dep imports assign SDK classes to PascalCase locals (e.g. ApiClient, Producer).
    # This is the standard pattern for optional dependencies that may not be installed.
    "N806",
    # N814: short private aliases for exception types (e.g. ConfigurationError as _CE) are deliberate.
    "N814",
    # TCH001/2/3: moving imports to TYPE_CHECKING is an optimisation; skipping to keep the
    # code readable and avoid accidental isinstance()-at-runtime breakage during refactors.
    "TCH001",
    "TCH002",
    "TCH003",
]

[tool.ruff.lint.per-file-ignores]
# Primitive factory functions are intentionally PascalCase (styled as constructors).
"src/pramanix/primitives/*.py" = ["N802"]
# Public API functions E, ForAll, Exists, DatetimeField are PascalCase by design.
"src/pramanix/expressions.py" = ["N802"]
# Adversarial test vectors use single uppercase letters (A, B, C…) as taxonomy labels.
# S101: assert used in adversarial test assertions — permitted in all test files.
"tests/adversarial/test_adversarial_numeric_boundary.py" = ["N802", "S101"]
# Adversarial circuit breaker tests use uppercase CB labels (CB1, CB2…) as scenario IDs.
"tests/adversarial/test_adversarial_circuit_breaker_failures.py" = ["N802", "S101"]
# Adversarial token replay tests use uppercase R labels (R1, R2…) as scenario IDs.
"tests/adversarial/test_adversarial_token_replay.py" = ["N802", "S101"]
# Integration tests use print() for latency measurement output; T20 not applicable here.
# Tests also use ConstraintExpr at runtime (not just type-checking) via invariants() return type.
# S105/S108 in integration tests are false positives on test fixture values and path strings.
"tests/integration/*.py" = ["T20", "TCH", "E402", "S101", "S106", "S105", "S108", "S301"]
# S105: false positives on attribute names like _secret_name/_secret_id/_secret_path in fixtures.
# S108: test path strings like "/tmp/..." are test inputs/fixture values, not real temp files.
# S301: serialization tests deliberately test pickle roundtrips.
# S311: seeded random used for deterministic test data generation.
# B017: broad pytest.raises used intentionally where exception type is legitimately variable.
"tests/unit/*.py" = ["TCH", "E402", "N802", "S101", "S106", "S105", "S108", "S301", "S311", "B017"]
# S101: property tests use pytest assert — required by hypothesis, cannot be replaced.
"tests/property/*.py" = ["TCH", "E402", "S101"]
# Adversarial test vectors use OWASP-style uppercase labels (A-X) to match the
# checklist specification. N802 suppressed — renaming would break traceability.
"tests/adversarial/test_field_overflow.py" = ["N802"]
"tests/adversarial/test_id_injection.py" = ["N802"]
# test_prompt_injection.py: N802 same as above. RUF001/003: the fullwidth digits
# (５, ０) in test_F_unicode_fullwidth_digits_in_string are intentional test
# vectors verifying that sanitise_user_input() normalises them correctly.
"tests/adversarial/test_prompt_injection.py" = ["N802", "RUF001", "RUF003"]
# test_nlp_validators_main.py: fullwidth chars (Ａ, Ｂ, Ｃ) are intentional
# test vectors for Unicode normalisation — RUF001 suppressed project-wide here.
"tests/unit/test_nlp_validators_main.py" = ["RUF001"]
# exceptions.py: SemanticPolicyViolation is an API-stable public name exported
# in __all__ since v0.1. Renaming to SemanticPolicyViolationError would be a
# breaking API change. N818 suppressed with justification.
"src/pramanix/exceptions.py" = ["N818"]
# _sanitise.py: the docstring examples showing NFKC normalisation deliberately
# contain fullwidth chars (Ａ, ５) to illustrate the before/after transform.
# These are documentation-only and do not affect runtime behaviour.
"src/pramanix/translator/_sanitise.py" = ["RUF002"]
"src/pramanix/integrations/*.py" = ["TCH"]
# N818: KafkaException stub must match confluent_kafka's real class name — renaming breaks compatibility.
"src/pramanix/interceptors/kafka.py" = ["N818"]
# CLI is a terminal entry point — print() is the intended output mechanism.
"src/pramanix/cli.py" = ["T20"]
# guard.py: `from decimal import Decimal as _Decimal` appears after the
# check_platform() call which must run before the import to fail-fast on
# unsupported platforms. E402 suppressed — reordering would break fail-fast.
"src/pramanix/guard.py" = ["E402"]
# guard_config.py: GovernanceConfig is imported after the Protocol definition
# because it depends on types declared in the same file. E402 deliberate.
"src/pramanix/guard_config.py" = ["E402"]
# cohere.py: optional-dependency imports (cohere SDK) follow the module-level
# _log assignment — standard translator pattern matching all other translators.
"src/pramanix/translator/cohere.py" = ["E402"]
"tests/integration/test_fastapi_middleware.py" = ["T20"]
"tests/integration/test_langchain_tool.py" = ["T20"]
"tests/integration/test_integration_matrix.py" = ["T20"]
"examples/*.py" = ["T20", "TCH", "E402"]
# test_audit_cli.py and test_crypto.py: pytest.importorskip() must be called before
# the optional-dependency imports, structurally forcing those imports below the top of
# file.  E402 (import not at top) and I001 (import sort order, since the late-import
# block cannot be merged with the top block) are suppressed here — not fixable by
# reordering without breaking the importorskip() semantics.
"tests/unit/test_audit_cli.py" = ["E402", "I001"]
"tests/unit/test_crypto.py" = ["E402", "I001"]
# Benchmark and spike scripts use print() for output and have sys.path setup
# before imports — both T20 and E402 are intentional patterns here.
# S311: seeded random used for deterministic benchmark payload generation, not cryptographic purposes.
"benchmarks/*.py" = ["T20", "E402", "N806", "TCH003", "RUF001", "RUF002", "RUF003", "S311"]
"spikes/*.py" = ["T20", "E402"]
"_fix_solve.py" = ["T20", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["pramanix"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--ignore=tests/perf"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "perf: performance benchmarks",
    "benchmark: timing-sensitive solver latency and throughput benchmarks",
    "adversarial: adversarial security tests",
    "integration: tests requiring real external services (Redis, Postgres, Vault, AWS, Azure, GCP)",
]
filterwarnings = [
    # #313 fix: replaced global "ignore:GuardConfig:UserWarning" with a narrower
    # filter targeting ONLY the InMemory sink advisories.  The previous global
    # filter silenced ALL GuardConfig production-mode security warnings across all
    # 4701 tests, meaning tests that verify warning emission could pass vacuously.
    #
    # InMemoryAuditSink / InMemoryDistributedBackend / InMemoryExecutionTokenVerifier
    # legitimately emit UserWarning when PRAMANIX_ENV=production — those warnings
    # are expected in tests that exercise these sinks and should not fail CI.
    # GuardConfig production-mode signer/sink warnings ARE security-relevant and
    # must NOT be globally suppressed so tests can verify they fire correctly.
    "ignore:InMemoryDistributedBackend is for testing only:UserWarning",
    "ignore:InMemoryAuditSink is for testing only:UserWarning",
    "ignore:InMemoryExecutionTokenVerifier is for testing only:UserWarning",
    "ignore:InMemoryApprovalWorkflow is for testing only:UserWarning",
    # requests detects a urllib3/chardet version mismatch — upstream packaging
    # issue between requests and urllib3; does not affect test correctness.
    "ignore:urllib3.*doesn't match a supported version",
    "ignore:chardet.*doesn't match a supported version",
    # AntiStructuring is deprecated in favour of CTRThresholdCheck.
    # Tests that exercise the deprecated primitive emit this warning intentionally.
    "ignore:AntiStructuring is deprecated:DeprecationWarning",
    # CohereTranslator old-SDK fallback is expected when testing v1 compatibility.
    "ignore:CohereTranslator.*falling back:UserWarning",
    # Non-linear arithmetic is an expected constraint in healthcare primitives
    # (e.g. dose_per_kg * weight_kg). Z3 handles it at runtime; the warning
    # is advisory only.
    "ignore:Non-linear arithmetic detected:UserWarning",
    # FailsafeMode.ALLOW_WITH_AUDIT is tested in its deprecated state.
    "ignore:CircuitBreakerConfig.failsafe_mode=ALLOW_WITH_AUDIT:DeprecationWarning",
    # asyncio.get_event_loop() deprecation in Python 3.12+ — tests that call
    # asyncio.get_event_loop().run_until_complete() emit this; will be migrated
    # to asyncio.run() in a follow-up refactor.
    "ignore:There is no current event loop:DeprecationWarning",
]

[tool.coverage.run]
source = ["src/pramanix"]
branch = true
omit = []

[tool.coverage.report]
fail_under = 98
show_missing = true
exclude_lines = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
    # Platform-specific branches unreachable on the current OS are excluded
    # so that Linux-only paths do not suppress coverage on Windows CI and
    # vice-versa.  These lines are exercised in the complementary CI platform.
    "if plat == .Linux.:",
    "if sys\\.platform == .linux.:",
    "if _is_musl\\(\\):",
]
